WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89556
Touch adjustment does not target shadow DOM elements
https://bugs.webkit.org/show_bug.cgi?id=89556
Summary
Touch adjustment does not target shadow DOM elements
Allan Sandfeld Jensen
Reported
2012-06-20 02:49:36 PDT
EventHandler::bestClickableNodeForTouchPoint() is currently ignoring shadow DOM elements, which means that it is currently not possible to use the controls of media-elements for instance.
Attachments
Patch
(1.75 KB, patch)
2012-06-20 02:54 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-04
(682.62 KB, application/zip)
2012-06-20 04:30 PDT
,
WebKit Review Bot
no flags
Details
Patch
(9.02 KB, patch)
2012-06-20 06:18 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(9.10 KB, patch)
2012-06-20 07:06 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(9.63 KB, patch)
2012-06-26 06:58 PDT
,
Kevin Ellis
no flags
Details
Formatted Diff
Diff
Patch
(9.92 KB, patch)
2012-06-26 07:49 PDT
,
Kevin Ellis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-06-20 02:54:00 PDT
Created
attachment 148529
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-20 04:30:30 PDT
Comment on
attachment 148529
[details]
Patch
Attachment 148529
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13006165
New failing tests: touchadjustment/html-label.html
WebKit Review Bot
Comment 3
2012-06-20 04:30:33 PDT
Created
attachment 148538
[details]
Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Allan Sandfeld Jensen
Comment 4
2012-06-20 06:18:58 PDT
Created
attachment 148547
[details]
Patch
Kenneth Rohde Christiansen
Comment 5
2012-06-20 06:38:58 PDT
Comment on
attachment 148547
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148547&action=review
LGTM
> LayoutTests/touchadjustment/media-element.html:28 > + function testRoundTouch(x, y, radius) > + {
I think we normally keep the { on the same line in JS
Build Bot
Comment 6
2012-06-20 06:40:05 PDT
Comment on
attachment 148547
[details]
Patch
Attachment 148547
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12996218
Build Bot
Comment 7
2012-06-20 06:59:10 PDT
Comment on
attachment 148547
[details]
Patch
Attachment 148547
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/13001200
Allan Sandfeld Jensen
Comment 8
2012-06-20 07:06:07 PDT
Created
attachment 148557
[details]
Patch
Antonio Gomes
Comment 9
2012-06-20 07:45:06 PDT
Allan, does it make use of
bug #80847
?
Allan Sandfeld Jensen
Comment 10
2012-06-20 07:52:59 PDT
(In reply to
comment #9
)
> Allan, does it make use of
bug #80847
?
Yes, I think that is what enables the fix to be this simple.
Allan Sandfeld Jensen
Comment 11
2012-06-22 02:49:08 PDT
***
Bug 89674
has been marked as a duplicate of this bug. ***
Allan Sandfeld Jensen
Comment 12
2012-06-22 02:56:19 PDT
(In reply to
comment #11
)
> ***
Bug 89674
has been marked as a duplicate of this bug. ***
The test-case in the patch posted in
bug #89674
looks like a more safe way to test shadow-dom that what I do.
Antonio Gomes
Comment 13
2012-06-22 11:34:20 PDT
Comment on
attachment 148557
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=148557&action=review
Code looks ok. One question: does it overlap with
bug 89674
?
> LayoutTests/touchadjustment/media-element.html:33 > + var adjustedNode = internals.touchNodeAdjustedToBestClickableNode(x, y, width, height, document);
should/could we unify internals::touchNodeAdjustedToBestClickableNode and Internals::nodeFromRect ?
> LayoutTests/touchadjustment/media-element.html:40 > + adjustedNode = testRoundTouch(120, 480, 120);
can not you do something like 26 var playCoords; 27 try { 28 playCoords = mediaControlsButtonCoordinates(video, "play-button"); 29 } catch (exception) { 30 failTest(exception.description); 31 return; ?
Kevin Ellis
Comment 14
2012-06-26 06:58:37 PDT
Created
attachment 149527
[details]
Patch
Kevin Ellis
Comment 15
2012-06-26 07:01:59 PDT
***
Bug 89674
has been marked as a duplicate of this bug. ***
Kevin Ellis
Comment 16
2012-06-26 07:49:02 PDT
Created
attachment 149531
[details]
Patch
Allan Sandfeld Jensen
Comment 17
2012-06-26 10:37:48 PDT
Comment on
attachment 148557
[details]
Patch Newer patch available.
WebKit Review Bot
Comment 18
2012-06-26 17:41:43 PDT
Comment on
attachment 149531
[details]
Patch Clearing flags on attachment: 149531 Committed
r121305
: <
http://trac.webkit.org/changeset/121305
>
WebKit Review Bot
Comment 19
2012-06-26 17:41:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug